2011-07-26	Till Straumann <strauman@slac.stanford.edu>

	* svgm.cfg, make/custom/svgm.cfg: moved svgm.cfg to
	make/custom/.

2009-08-18	Till Straumann <strauman@slac.stanford.edu>

	* include/bsp.h, startup/bspclean.c, startup/bspstart.c,
	synergy/reboot.c: renamed rtemsReboot() -> bsp_reset().

2008-10-04	Till Straumann <strauman@slac.stanford.edu>

	* svgm.cfg: updated to 4.9; removed make-exe
	make-cxx-exe commands. Replaced CPU cflags to use
	-mpowerpc -D__ppc_generic.

2008-10-04	Till Straumann <strauman@slac.stanford.edu>

	* startup/linkcmds: increased size of CODE memory
	area to 32M.

2008-03-20	Till Straumann <strauman@slac.stanford.edu>

	* include/bsp.h: confdefs.h now wants us to use
	BSP_INTERRUPT_STACK_SIZE instead of
	CONFIGURE_INTERRUPT_STACK_MEMORY.

2007-12-11	Till Straumann <strauman@slac.stanford.edu>

	* startup/bspstart.c: eliminated BSP_Configuration;
	must set workspace start in std. Configuration table.

2007-12-11	Till Straumann <strauman@slac.stanford.edu>

	* Makefile.am: use new irq_bspsupport.rel which was
	split out of exc_bspsupport.rel to provide finer-grained
	control over what BSPs want to use.

2007-12-08	Till Straumann <strauman@slac.stanford.edu>

	* Makefile.am: merged shared/vme/vme_universe.c and
	shared/vme/vme_universe_dma.c into one file.

2007-12-08	Till Straumann <strauman@slac.stanford.edu>

	* vme/VMEConfig.h: added error status to
	BSP_VME_UNIVERSE_INSTALL_IRQ_MGR(err) macro.

2007-11-30	Till Straumann <strauman@slac.stanford.edu>

	* startup/bspstart: removed _Cpu_table.exceptions_in_RAM.

2007/10/08 (TS):
 - (bspstart.c) resize IBAT0 (and while we're at it DBAT0, too even though
   the latter is disabled once page tables are up) to ONLY cover
   physical memory size.
   This resolves mysterious exceptions which seem to be caused by
   branch prediction into mapped but non-existent memory!
 - (yellowfin.c) yellowfin TX descriptor ring was clobbered when completely full